# esp32-conways-game-of-life-rs

./: .gitignore  Cargo.toml  README.md  conways_wasm_bg.wasm  diagram.json  index.html  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-risc-v-imac.yml  ci-risc-v-imc.yml  ci-unified.yml  ci-xtensa.yml  release-risc-v-imac.yml  release-risc-v-imc.yml  release-xtensa.yml  release.yml  rust_ci.yml
docs/: README.md
esope-sld-c-w-s3/: Cargo.toml  build.rs
esope-sld-c-w-s3/.cargo/: config.toml
esp32-c3-lcdkit/: Cargo.toml
esp32-c3-lcdkit/.cargo/: config.toml
esp32-c3-lcdkit/src/: main.rs
esp32-c6-waveshare-1_47/: Cargo.toml  diagram.json  wokwi.toml
esp32-c6-waveshare-1_47/src/: main.rs
esp32-s3-box-3/: Cargo.toml  diagram.json
esp32-s3-box-3-minimal/: Cargo.toml
esp32-s3-box-3-minimal/src/: main.rs
esp32-s3-box-3/src/: main.rs
esp32-s3-lcd-ev-board/: Cargo.toml
esp32-s3-lcd-ev-board-2/: Cargo.toml
esp32-s3-lcd-ev-board-2/.cargo/: config.toml
esp32-s3-lcd-ev-board-2/src/: main.rs
esp32-s3-lcd-ev-board-embassy/: Cargo.toml
esp32-s3-lcd-ev-board-embassy/src/: main.rs
esp32-s3-lcd-ev-board/src/: main.rs
esp32-wrover-kit/: Cargo.toml  build.rs
esp32-wrover-kit/.cargo/: config.toml
esp32-wrover-kit/src/: main.rs
m5stack-atom-s3/: Cargo.toml
m5stack-atom-s3/src/: main.rs
m5stack-atom-s3r/: Cargo.toml
m5stack-atom-s3r/src/: main.rs
m5stack-core2/: Cargo.toml
m5stack-core2/src/: main.rs
m5stack-cores3/: Cargo.toml  diagram.json  wokwi.toml
m5stack-cores3/src/: main.rs
scripts/: fix-code.sh  flash.sh
src/: main.rs  spi_dma_displayinterface.rs
update-deps/: Cargo.toml
update-deps/src/: main.rs
wasm/: Cargo.toml  build.rs  index.html
wasm/.cargo/: config.toml
wasm/pkg/: conways_wasm.js  index.html
wasm/src/: lib.rs
waveshare-esp32-c6-lcd-1_47/: Cargo.toml
waveshare-esp32-c6-lcd-1_47/.cargo/: config.toml
waveshare-esp32-c6-lcd-1_47/src/: main.rs
waveshare-esp32-s3-touch-amoled-1_8/: Cargo.toml
waveshare-esp32-s3-touch-amoled-1_8/.cargo/: config.toml
waveshare-esp32-s3-touch-lcd-1_28/: Cargo.toml
waveshare-esp32-s3-touch-lcd-1_28/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/modules/: build.rs  config.rs  embassy.rs  fix_cargo.rs  migrate.rs  mod.rs  project.rs  psram_feature.rs  toml_fix.rs  update.rs  wasm.rs
