[package]
name = "esp32-conways-game-of-life-rs"
version = "0.4.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# hal = { version = "0.16.0", features = ["esp32c3"] }
esp-hal = { version = "0.17.0", features = [ "esp32s3" ] }
# hal = { package = "esp32s3-hal", version = "0.15.1" }
esp-backtrace = { version = "0.11.1", features = [ "esp32s3", "panic-handler", "exception-handler", "println" ] }
esp-println = { version = "0.9.1", features = ["esp32s3","log"] }
log = { version = "0.4.18" }
mipidsi = "0.7.1"
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
heapless = "0.8.0"
embedded-dma = "0.2.0"
esp-bsp = { version = "0.2.0" }
esp-display-interface-spi-dma = { path = "../esp-display-interface-spi-dma", features = [ "esp32s3" ] }
