[package]
name = "esp32-conways-game-of-life-rs"
version = "0.5.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
esp-hal = "0.22.0"
esp-backtrace = { version = "0.14.2", features = [
    "panic-handler",
    "println"
] }
esp-println = { version = "0.12.0", features = [ "log" ] }
log = { version = "0.4.21" }

esp-alloc = "0.5.0"
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
mipidsi = "0.8.0"
esp-display-interface-spi-dma = "0.2.0"
esp-bsp = "0.4.1"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
heapless = "0.8.0"


[features]
default = [ "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp32-s3-box-3" ]

esp32-s3-box-3 = [ "esp-bsp/esp32-s3-box-3", "esp-hal/octal-psram" ]