[package]
edition = "2024"
name    = "esope-sld-c-w-s3-conways-game-of-life"
version = "0.7.0"


# Empty workspace to avoid being part of parent workspace
[workspace]

[[bin]]
name = "esp32-conways-game-of-life-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-alloc = "0.9.0"
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable", "psram"] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
log = "0.4.28"

embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
eeprom24x = "0.7.2"
embassy-executor    = "0.9.0"
embassy-sync        = "0.7"
embassy-time        = "0.5.0"
esp-rtos            = { version = "0.2.0", features = ["esp32s3", "embassy"] }
static_cell         = { version = "2.1.1", features = ["nightly"] }
heapless = "0.9.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
