[package]
name = "esp32-conways-game-of-life-rs"
version = "0.6.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"



# Empty workspace to avoid being part of parent workspace
[workspace]

[dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-backtrace = { version = "0.15.1", features = [
    "panic-handler",
    "println"
] }
esp-println = { version = "0.13", features = [ "log" ] }
log = { version = "0.4.28" }

esp-alloc = "0.7.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
embedded-graphics-framebuf = "0.5.0"
heapless = "0.8.0"
embedded-hal-bus = "0.3.0"
bevy_ecs = { version = "0.17.1", default-features = false }
#bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", default-features = false }

esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }

[features]
default = [ "esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3" ]


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
