[package]
edition = "2024"
name = "esp32-s3-box-conways-game-of-life"
version = "0.7.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
license = "MIT OR Apache-2.0"

# Empty workspace to avoid being part of parent workspace
[workspace]

[dependencies]
esp-hal = { version = "1.1.0", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.19.0", features = [
    "panic-handler",
    "println"
] }
esp-println = { version = "0.17.0", features = [ "log-04" ] }
log = { version = "0.4.29" }

esp-alloc = "0.10.0"
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
mipidsi = "0.10.0"
#esp-display-interface-spi-dma = "0.3.0"
# esp-display-interface-spi-dma = { path = "../esp-display-interface-spi-dma"}
# esp-bsp = "0.4.1"
embedded-graphics-framebuf = "0.5.0"
heapless = "0.9.2"
embedded-hal-bus = "0.3.0"
#bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
bevy_ecs = { version = "0.18.1", default-features = false }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }

[features]
default = [ "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp32-s3-box-3" ]

esp32-s3-box-3 = []
