[package]
name = "esp32-conways-game-of-life-rs"
version = "0.5.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32", "unstable", "psram"] }
esp-backtrace = { version = "0.15.1", features = [
    "panic-handler",
    "println"
] }
esp-println = { version = "0.13", features = [ "log" ] }
log = { version = "0.4.26" }

esp-alloc = "0.7.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
#esp-display-interface-spi-dma = "0.3.0"
# esp-display-interface-spi-dma = { path = "../esp-display-interface-spi-dma"}
# esp-bsp = "0.4.1"
embedded-graphics-framebuf = "0.5.0"
heapless = "0.8.0"
embedded-hal-bus = "0.3.0"
bevy_ecs = { version = "0.16.1", default-features = false }


[features]
default = [ "esp-hal/esp32", "esp-backtrace/esp32", "esp-println/esp32", "psram" ]
psram = []
