[package]
name = "m5stack-core2-conways-game-of-life"
version = "0.7.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"



# Empty workspace to avoid being part of parent workspace
[workspace]

[dependencies]
esp-hal = { version = "1.1.0", features = ["esp32", "unstable"] }
esp-backtrace = { version = "0.19.0", features = [
    "panic-handler",
    "println"
] }
esp-println = { version = "0.17.0", features = [ "log-04" ] }
log = { version = "0.4.29" }

esp-alloc = "0.10.0"
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
mipidsi = "0.10.0"
embedded-graphics-framebuf = "0.5.0"
heapless = "0.9.2"
embedded-hal-bus = "0.3.0"

# M5Stack Core2 specific
# Power Management IC for Core2
axp192 = "0.2.0"

bevy_ecs = { version = "0.18.1", default-features = false }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }

[features]
default = [ "esp-hal/esp32", "esp-backtrace/esp32", "esp-println/esp32", "m5stack-core2" ]

m5stack-core2 = [ ]
