[package]
name = "waveshare-esp32-c6-lcd-esp32-conways-game-of-life"
version = "0.7.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

# Empty workspace to avoid being part of parent workspace
[workspace]

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
esp-backtrace = { version = "0.18.1", features = [
    "panic-handler",
    "println"
] }
esp-println = { version = "0.16.1", features = [ "log-04" ] }
log = { version = "0.4.28" }

esp-alloc = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
#esp-display-interface-spi-dma = "0.3.0"
# esp-display-interface-spi-dma = { path = "../esp-display-interface-spi-dma"}
esp-bsp = "0.4.1"
# embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
embedded-graphics-framebuf = "0.5.0"
heapless = "0.9.1"
embedded-hal-bus = "0.3.0"
bevy_ecs = { version = "0.17.2", default-features = false }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

[features]
# default = [ "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp32-s3-box-3" ]
default = [ "esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6" ]

# esp32-s3-box-3 = [ "esp-bsp/esp32-s3-box-3", "esp-hal/psram" ]