[package]
edition = "2024"
name    = "esp32-conways-game-of-life-rs"
version = "0.7.0"


# Empty workspace to avoid being part of parent workspace
[workspace]

[[bin]]
name = "esp32-conways-game-of-life-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-alloc = "0.8.0"
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32s3", "psram"] }
esp-println = { version = "0.15.0", default-features = false, features = ["jtag-serial", "log-04"] }
log = "0.4.27"

embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
heapless = "0.8.0"
sh8601-rs = { version = "0.1.6", features = ["waveshare_18_amoled"] }
embedded-hal-bus = "0.3.0"
bevy_ecs = { version = "0.16.1", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false